
HuffmanNode Decode
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 14.32 ms | 4.453 ms | 0.244 ms | 953.1250 | 953.1250 | 953.1250 |  26.81 MB |
| Uncompress | 11.47 ms | 0.118 ms | 0.006 ms | 953.1250 | 953.1250 | 953.1250 |  25.79 MB |

Без Pixel
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 11.47 ms | 0.348 ms | 0.019 ms | 656.2500 | 656.2500 | 656.2500 |   2.81 MB |
| Uncompress | 10.14 ms | 0.633 ms | 0.035 ms | 484.3750 | 484.3750 | 484.3750 |   1.79 MB |

Huffman Fill
|     Method |      Mean |     Error |    StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |----------:|----------:|----------:|---------:|---------:|---------:|----------:|
|   Compress |  7.911 ms | 0.2309 ms | 0.0127 ms | 984.3750 | 984.3750 | 984.3750 |   3.03 MB |
| Uncompress | 10.447 ms | 1.9141 ms | 0.1049 ms | 484.3750 | 484.3750 | 484.3750 |   1.79 MB |

Vectorized
|     Method |     Mean |     Error |    StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|----------:|----------:|---------:|---------:|---------:|----------:|
|   Compress | 3.220 ms | 0.7640 ms | 0.0419 ms | 992.1875 | 992.1875 | 992.1875 |   3.04 MB |
| Uncompress | 7.252 ms | 0.5335 ms | 0.0292 ms | 492.1875 | 492.1875 | 492.1875 |   1.81 MB |

YUV422
|     Method |     Mean |     Error |    StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|----------:|----------:|---------:|---------:|---------:|----------:|
|   Compress | 2.445 ms | 0.4181 ms | 0.0229 ms | 500.0000 | 500.0000 | 500.0000 |   2.04 MB |
| Uncompress | 6.482 ms | 1.0553 ms | 0.0578 ms | 328.1250 | 328.1250 | 328.1250 |   1.24 MB |