@@ -94,3 +94,9 @@ YUV422
 |----------- |---------:|----------:|----------:|---------:|---------:|---------:|----------:|
 |   Compress | 2.445 ms | 0.4181 ms | 0.0229 ms | 500.0000 | 500.0000 | 500.0000 |   2.04 MB |
 | Uncompress | 6.482 ms | 1.0553 ms | 0.0578 ms | 328.1250 | 328.1250 | 328.1250 |   1.24 MB |
+
+Custom bitmap
+|     Method |     Mean |     Error |    StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|----------:|----------:|---------:|---------:|---------:|----------:|
+|   Compress | 1.944 ms | 0.1548 ms | 0.0085 ms | 500.0000 | 500.0000 | 500.0000 |   2.04 MB |
+| Uncompress | 4.822 ms | 0.1619 ms | 0.0089 ms | 328.1250 | 328.1250 | 328.1250 |   1.25 MB |
